feat: add targets to build.xml for ant